edit comments and readme

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "4           4267.19       11617.03               Calm              85.61  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -680,20 +680,20 @@
     }
    ],
    "source": [
-    "# Example scatter plot using predicted and actual values\n",
+    "#scatter plot using predicted and actual values\n",
     "plt.scatter(y_pred, y_test, marker='*', color='blue', label='Data points')\n",
     "\n",
-    "# Compute the best fit line parameters (slope and intercept)\n",
+    "#compute the best fit line parameters (slope and intercept)\n",
     "slope, intercept = np.polyfit(y_pred, y_test, 1)\n",
     "\n",
-    "# Create x values for plotting the line. Here, we create 100 equally spaced values between the min and max of y_pred.\n",
+    "#create x values for plotting the line. create 100 equally spaced values between the min and max of y_pred.\n",
     "x_line = np.linspace(np.min(y_pred), np.max(y_pred), 100)\n",
     "y_line = slope * x_line + intercept\n",
     "\n",
-    "# Plot the best fit line\n",
+    "#plot the best fit line\n",
     "plt.plot(x_line, y_line, color='orange', label='Best Fit Line')\n",
     "\n",
-    "# Add labels, legend, and show the plot\n",
+    "#add labels, legend, and show the plot\n",
     "plt.title(\"Linear Regression\")\n",
     "plt.xlabel('Predicted Values')\n",
     "plt.ylabel('True Values')\n",
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -716,24 +716,23 @@
     }
    ],
    "source": [
-    "#Generatng alpha from 0 to 10 in steps of 0.001\n",
+    "#generatng alpha from 0 to 10 in steps of 0.001\n",
     "alpha = np.arange(0,10.001,0.001)\n",
     "alpha = alpha.tolist()\n",
     "results = {}\n",
     "#for loop to test out all the alpha values to find the best value\n",
     "for a in alpha:\n",
-    "    #Ridge Regression\n",
+    "    #ridge Regression\n",
     "    RidgeModel = Ridge(alpha=a)\n",
     "    RidgeModel.fit(X_train, y_train)\n",
     "    y_pred = RidgeModel.predict(X_test)\n",
     "\n",
-    "    #Calculation of R^2, MSE, MAE\n",
+    "    #calculation of R^2, MSE, MAE\n",
     "    Rr2 = r2_score(y_test, y_pred)\n",
     "    Rmse = mean_squared_error(y_test, y_pred)\n",
     "    Rmae = mean_absolute_error(y_test, y_pred)\n",
     "    results[a] = {'R²': Rr2, 'MSE': Rmse, 'MAE': Rmae}\n",
-    "\n",
-    "#Output the best performing alpha and its performance matrics. EIther maximising R² or minimising MSE. \n",
+    "#output the best performing alpha and its performance matrics. EIther maximising R² or minimising MSE. \n",
     "best_alpha_val = max(results, key=lambda a: results[a]['R²'])\n",
     "\n",
     "print(\"Best alpha: \", best_alpha_val)\n",
@@ -742,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -757,20 +756,20 @@
     }
    ],
    "source": [
-    "# Example scatter plot using predicted and actual values\n",
+    "#scatter plot using predicted and actual values\n",
     "plt.scatter(y_pred, y_test, marker='*', color='blue', label='Data points')\n",
     "\n",
-    "# Compute the best fit line parameters (slope and intercept)\n",
+    "#compute the best fit line parameters (slope and intercept)\n",
     "slope, intercept = np.polyfit(y_pred, y_test, 1)\n",
     "\n",
-    "# Create x values for plotting the line. Here, we create 100 equally spaced values between the min and max of y_pred.\n",
+    "#create x values for plotting the line. Here, we create 100 equally spaced values between the min and max of y_pred.\n",
     "x_line = np.linspace(np.min(y_pred), np.max(y_pred), 100)\n",
     "y_line = slope * x_line + intercept\n",
     "\n",
-    "# Plot the best fit line\n",
+    "#plot the best fit line\n",
     "plt.plot(x_line, y_line, color='orange', label='Best Fit Line')\n",
     "\n",
-    "# Add labels, legend, and show the plot\n",
+    "#add labels, legend, and show the plot\n",
     "plt.title(\"Ridge Regression\")\n",
     "plt.xlabel('Predicted Values')\n",
     "plt.ylabel('True Values')\n",
@@ -799,15 +798,15 @@
     }
    ],
    "source": [
-    "kf = KFold(n_splits=10, shuffle=True, random_state=42) #Split the dataset into 10\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state=42) #split the dataset into 10\n",
     "\n",
-    "# Using cross_val_score with r² as the metric\n",
+    "#using cross_val_score with r² as the metric\n",
     "lr_scores = cross_val_score(LinearModel, df_encoded, y, cv=kf, scoring='r2')\n",
     "print(\"Linear Regression CV R² scores:\", lr_scores)\n",
     "print(\"Mean CV R² (Linear Regression):\", lr_scores.mean())\n",
     "\n",
     "print(\"\\n\")\n",
-    "#Ridge Regression Evaluation\n",
+    "#ridge Regression Evaluation\n",
     "ridge_alpha = 0.0 #the best alpha value is determined by the code above\n",
     "RidgeModel = Ridge(alpha=ridge_alpha)\n",
     "ridge_scores = cross_val_score(RidgeModel, df_encoded, y, cv=kf, scoring='r2')\n",
@@ -998,24 +997,24 @@
        "23     weather_conditions_Stormy   1.334982"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Additional check for multicollinearity: VIF (Variance Inflation Factor)\n",
-    "# Add constant for intercept\n",
+    "# VIF (Variance Inflation Factor)\n",
+    "# add constant for intercept to ensure that the VIF values accurately reflect the underlying multicollinearity among the predictors\n",
     "X_with_const = add_constant(X_train) \n",
-    " # Include constant in feature names\n",
+    " # include constant in feature names\n",
     "feature_columns_with_const = ['const'] + list(df_encoded.columns) \n",
     "\n",
-    "# Compute the VIF for each feature\n",
+    "# compute the VIF for each feature\n",
     "vif_data = pd.DataFrame()\n",
     "vif_data[\"feature\"] = feature_columns_with_const\n",
     "vif_data[\"VIF\"] = [variance_inflation_factor(X_with_const, i) for i in range(X_with_const.shape[1])]\n",
     "\n",
-    "# Display the VIFs\n",
+    "# display the VIFs\n",
     "vif_data"
    ]
   },
@@ -1329,27 +1328,27 @@
     }
    ],
    "source": [
-    "# Calculate the correlation matrix for the features\n",
+    "#calculate the correlation matrix for the features\n",
     "correlation_matrix = df_encoded.corr()\n",
     "\n",
-    "# Display the correlation matrix\n",
+    "#display the correlation matrix\n",
     "print(\"\\nCorrelation Matrix:\")\n",
     "print(correlation_matrix)\n",
     "\n",
-    "# Plot a heatmap of the correlation matrix\n",
+    "#plot a heatmap of the correlation matrix\n",
     "plt.figure(figsize=(30, 30))\n",
     "sb.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".3f\", linewidths=0.5)\n",
     "plt.title('Correlation Matrix of Features')\n",
     "plt.show()\n",
     "\n",
-    "# Identify pairs of features with high correlation (absolute value > 0.8)\n",
+    "#identify pairs of features with high correlation (absolute value > 0.8)\n",
     "high_correlation_pairs = []\n",
     "for i in range(correlation_matrix.shape[0]):\n",
     "    for j in range(i):\n",
     "        if abs(correlation_matrix.iloc[i, j]) > 0.8:\n",
     "            high_correlation_pairs.append((correlation_matrix.columns[i], correlation_matrix.columns[j], correlation_matrix.iloc[i, j]))\n",
     "\n",
-    "# Display highly correlated feature pairs\n",
+    "#display highly correlated feature pairs\n",
     "print(\"\\nHighly Correlated Feature pairs (correlation > 0.8):\")\n",
     "for pair in high_correlation_pairs:\n",
     "    print(f\"{pair[0]} and {pair[1]}: {pair[2]:.3f}\")"
